# Brush

./: .clang-format  CMakeLists.txt  README.md
App/Hello/: CMakeLists.txt  main.cpp
CMake/: Commands.cmake  HelperFunctions.cmake
Source/: Brush.hpp  CMakeLists.txt
Source/Core/: Brush.cpp  Defines.hpp
Tests/: CMakeLists.txt
